--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ ul.task-list li input[type="checkbox"] {
 <!-- main -->
 <div class="quarto-about-trestles content">
   <div class="about-entity">
-    <img src="media/headshot.png" class="about-image
+    <img src="media/file.png" class="about-image
   round " style="height: 20em; width: 20em;">
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
