--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Ramon Melser: E-Portfolio - About</title>
+<title>Ramon Melser: E-Portfolio - Publications</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -93,12 +93,12 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./about.html" aria-current="page"> 
-<span class="menu-text">About</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link" href="./resume.html"> 
 <span class="menu-text">Resume</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link active" href="./publications.html" aria-current="page"> 
+<span class="menu-text">Publications</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
@@ -119,7 +119,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">About</h1>
+<h1 class="title">Publications</h1>
 </div>
 
 
@@ -136,7 +136,11 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>This section is under construction</p>
+<p><em>Peer-reviewed publications:</em></p>
+<p><strong>Melser, R</strong>., Coops, N. C., Wulder, M.A., &amp; Derksen, C. (2023). Multi-Source Remote Sensing Based Modelling of Vegetation Productivity in the Boreal: Issues &amp; Opportunities. <em>Canadian Journal of Remote Sensing, 49(1).</em> <a href="https://doi.org/10.1080/07038992.2023.2256895" class="uri">https://doi.org/10.1080/07038992.2023.2256895</a></p>
+<p><strong>Melser, R</strong>., Coops, N. C., &amp; Derksen, C. (2024). Characterizing satellite-derived freeze/thaw regimes through spatial and temporal clustering for the identification of growing season constraints on vegetation productivity. <em>Remote Sensing of Environment, 309,</em> 114210. <a href="https://doi.org/10.1016/j.rse.2024.114210" class="uri">https://doi.org/10.1016/j.rse.2024.114210</a></p>
+<p><em>Reports:</em></p>
+<p>2021, M.G.E.M.: Random Forest predictive mapping project aimed towards identifying wetlands in the Chinchaga Watershed Management Basin, Fort St.&nbsp;John Timber Supply Area, BC.</p>
 
 
 
