Content Development Tab added

--- a/resume.html
+++ b/resume.html
@@ -120,6 +120,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#publications" id="toc-publications" class="nav-link" data-scroll-target="#publications">Publications</a></li>
   <li><a href="#conferences-talks" id="toc-conferences-talks" class="nav-link" data-scroll-target="#conferences-talks">Conferences &amp; Talks</a></li>
   <li><a href="#awards-honors" id="toc-awards-honors" class="nav-link" data-scroll-target="#awards-honors">Awards &amp; Honors</a></li>
+  <li><a href="#course-content-development" id="toc-course-content-development" class="nav-link" data-scroll-target="#course-content-development">Course &amp; Content Development</a></li>
   <li><a href="#teaching-assistantships" id="toc-teaching-assistantships" class="nav-link" data-scroll-target="#teaching-assistantships">Teaching Assistantships</a></li>
   <li><a href="#institutional-service" id="toc-institutional-service" class="nav-link" data-scroll-target="#institutional-service">Institutional Service</a></li>
   </ul>
@@ -180,6 +181,11 @@ ul.task-list li input[type="checkbox"] {
 <p>2021 (Winter Session), President’s Academic Excellence Initiative PhD Award, University of British Columbia, CAD $450</p>
 <p>2020 (Winter Session), Binkley Family Graduate Scholarship, University of British Columbia, CAD$ 5100</p>
 </section>
+<section id="course-content-development" class="level1">
+<h1>Course &amp; Content Development</h1>
+<p>2024 (Summer Session), Graduate Academic Assistant, CONS 327 Course Development, Faculty of Forestry, University of British Columbia</p>
+<p>2023/2024, TA Training Program Coordinator, Teaching &amp; Learning Support, Dean’s Office, Faculty of Forestry, University of British Columbia.</p>
+</section>
 <section id="teaching-assistantships" class="level1">
 <h1>Teaching Assistantships</h1>
 <p>FCOR 599, Project Proposal Development and Proof of Concept, Senior Teaching Assistant (2 Terms, Winter session, 2024/25), 6 credits, 39 students.</p>
@@ -195,6 +201,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="institutional-service" class="level1">
 <h1>Institutional Service</h1>
+<p>2024, M.G.E.M., Sept.&nbsp;Retreat, Alumni Guest &amp; Support.</p>
 <p>2023, M.G.E.M., Sept.&nbsp;Retreat, Alumni Guest &amp; Support.</p>
 <p>2023, M.G.E.M., Info Session, Alumni Panelist.</p>
 <p>2022, M.G.E.M., Sept.&nbsp;Retreat, Alumni Guest &amp; Support.</p>
