--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link active" href="./publications.html" aria-current="page"> 
 <span class="menu-text">Publications</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./content_development.html"> 
+<span class="menu-text">Content Development</span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
           <div class="quarto-navbar-tools">
