--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Publications</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./content_development.html"> 
-<span class="menu-text">Content Development</span></a>
+    <a class="nav-link" href="./content.html"> 
+<span class="menu-text">Content &amp; Deliverables</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
@@ -119,7 +119,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-about-trestles">
   <div class="about-entity">
     <img src="images/MGEM_logo.png" class="about-image
-  round " style="height: 20em; width: 20em;">
+  rounded " style="width: 20em;">
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
 <h1 class="title">Your E-Portfolio</h1>
