--- a/resume.html
+++ b/resume.html
@@ -101,8 +101,8 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Publications</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./content_development.html"> 
-<span class="menu-text">Content Development</span></a>
+    <a class="nav-link" href="./content.html"> 
+<span class="menu-text">Content &amp; Deliverables</span></a>
   </li>  
 </ul>
           </div> <!-- /navcollapse -->
